--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@
   @apply w-[34px] h-[34px] p-2 bg-primary rounded-lg text-black text-lg font-semibold flex
   justify-center items-center;
 }
+.input {
+  @apply w-full rounded-lg py-4 text-black pl-6 pr-10 outline-none 
+  focus:ring-primary focus:outline-none focus:ring-2;
+}
 
 body {
   font-family: sans-serif;
